--- a/prod_fullchain_ssnet_combined_wire.cfg
+++ b/prod_fullchain_ssnet_combined_wire.cfg
@@ -135,8 +135,10 @@ ProcessDriver:{
       ImageClusterManager: {
         Verbosity: 2
         Profile: true
-        ClusterAlgoType: ["SuperClusterMaker","TrackVertexSeeds","TrackVertexEstimate","TrackVertexScan","ShowerPlaneSeeds","ShowerVertexScan","VertexParticleClusterMaker","CombineVertex","MatchOverlap","ShapeAnalysis","GapAnalysis","AngleAnalysis","MatchAnalysis","dQdsAnalysis"]
-        ClusterAlgoName: ["adc_superclustermaker","trackvertexseeds","trackvertexestimate","trackvertexscan","showerplaneseeds","showervertexscan","vertexparticleclustermaker","combinevertex","matchoverlap","shapeanalysis","gapanalysis","angleanalysis","matchanalysis","dqdsanalysis"]
+        #ClusterAlgoType: ["SuperClusterMaker","TrackVertexSeeds","TrackVertexEstimate","TrackVertexScan","ShowerPlaneSeeds","ShowerVertexScan","VertexParticleClusterMaker","CombineVertex","MatchOverlap","ShapeAnalysis","GapAnalysis","AngleAnalysis","MatchAnalysis","dQdsAnalysis"]
+        #ClusterAlgoName: ["adc_superclustermaker","trackvertexseeds","trackvertexestimate","trackvertexscan","showerplaneseeds","showervertexscan","vertexparticleclustermaker","combinevertex","matchoverlap","shapeanalysis","gapanalysis","angleanalysis","matchanalysis","dqdsanalysis"]
+        ClusterAlgoType: ["SuperClusterMaker","TrackVertexSeeds","TrackVertexEstimate","TrackVertexScan","ShowerPlaneSeeds","ShowerVertexScan","VertexParticleClusterMaker","CombineVertex","MatchOverlap","ShapeAnalysis","GapAnalysis","AngleAnalysis","MatchAnalysis"]
+        ClusterAlgoName: ["adc_superclustermaker","trackvertexseeds","trackvertexestimate","trackvertexscan","showerplaneseeds","showervertexscan","vertexparticleclustermaker","combinevertex","matchoverlap","shapeanalysis","gapanalysis","angleanalysis","matchanalysis"]
         StoreAlgoData: false
         StoreAlgoName: ["combinevertex","matchoverlap"]
 	adc_superclustermaker : {
