--- a/prod_fullchain_ssnet_combined_wire.cfg
+++ b/prod_fullchain_ssnet_combined_wire.cfg
@@ -2,8 +2,8 @@ ProcessDriver:{
   Verbosity: 2
   EnableFilter: false
   RandomAccess: false
-  ProcessType: ["ChannelMax","ChannelMax","ChannelMax","CombineImages","SegmentMask","SegmentMask","MaskImage","MaskImage","LArbysImage","VertexAna"]
-  ProcessName: ["ChannelMaxPlane0","ChannelMaxPlane1","ChannelMaxPlane2","CombineImages","ShowerSegment","TrackSegment","ShowerImage","TrackImage","LArbysImage","VertexAna"]
+  ProcessType: ["ChannelMax","ChannelMax","ChannelMax","CombineImages","SegmentMask","SegmentMask","MaskImage","MaskImage","LArbysImage","VertexAna","LEE1e1pAna"]
+  ProcessName: ["ChannelMaxPlane0","ChannelMaxPlane1","ChannelMaxPlane2","CombineImages","ShowerSegment","TrackSegment","ShowerImage","TrackImage","LArbysImage","VertexAna","LEE1e1pAna"]
   AnaFile: "reco_ana.root"
   IOManager: {
     Verbosity: 2
@@ -89,9 +89,19 @@ ProcessDriver:{
     PGraphProducer: "test"
     PxContourProducer: "test_ctor"
     PxImageProducer: "test_img"
-    TrueROIProducer: "croi"
+    TrueROIProducer: "segment"
     RecoROIProducer: "croimerge"
     FirstROI: false
+    }
+    LEE1e1pAna: {
+      Verbosity: 2
+      Image2DProducer: "modimg"
+      PGraphProducer: "test"
+      RecoROIProducer: "croimerge"
+      PxContourProducer: "test_ctor"
+      PxImageProducer: "test_img"
+      TrueROIProducer: "segment"
+      FirstROI: false
     }
     # LArOpenCV driver
     LArbysImage: {
