--- a/prod_fullchain_ssnet_combined.cfg
+++ b/prod_fullchain_ssnet_combined.cfg
@@ -52,7 +52,7 @@ ProcessDriver:{
     }
     ShowerSegment: {
       Verbosity: 2
-      ROIProducer: ""
+      ROIProducer: "segment"
       ImageProducer:  "uburn"
       OutputProducer: "shower_segment"
       ValidROI: ["Cosmic"]
@@ -61,7 +61,7 @@ ProcessDriver:{
     }
     TrackSegment: {
       Verbosity: 2
-      ROIProducer: ""
+      ROIProducer: "segment"
       ImageProducer:  "uburn"
       OutputProducer: "track_segment"
       ValidROI: ["BNB"]
@@ -74,7 +74,8 @@ ProcessDriver:{
       MaskValue: 0
       OutputProducer: "shower_tpc"
       ReferenceProducer: "shower_segment"
-      TargetProducer: "tpc"
+      #TargetProducer: "tpc"
+      TargetProducer: "wire"
     }
     TrackImage: {
       Verbosity: 2
@@ -82,13 +83,15 @@ ProcessDriver:{
       MaskValue: 0
       OutputProducer: "track_tpc"
       ReferenceProducer: "track_segment"
-      TargetProducer: "tpc"
+      #TargetProducer: "tpc"
+      TargetProducer: "wire"
     }
     # LArOpenCV driver
     LArbysImage: {
       Verbosity: 2
       Profile: true
-      ADCImageProducer: "tpc"
+      #ADCImageProducer: "tpc"
+      ADCImageProducer: "wire"
       TrackImageProducer: "track_tpc"
       ShowerImageProducer: "shower_tpc"
       ThruMuImageProducer: "thrumupixels"
@@ -291,32 +294,40 @@ ProcessDriver:{
     } # END: LArbysImage
     ROIAna: {
       ROIProducer: "croimerge"
-      ImageProducer: "tpc"
+      #ImageProducer: "tpc"
+      ImageProducer: "wire"
     }
     VertexAna: {
-      Image2DProducer: "tpc"
+      #Image2DProducer: "tpc"
+      Image2DProducer: "wire"
       PGraphProducer : "test"
       PxContourProducer: "test_ctor"
       PxImageProducer: "test_img"
-      TrueROIProducer: "tpc"
+      #TrueROIProducer: "tpc"
+      TrueROIProducer: "segment"
       RecoROIProducer: "croimerge"
       FirstROI: false
     }
     LEE1e1pAna: {
-      Image2DProducer: "tpc"
+      #Image2DProducer: "tpc"
+      Image2DProducer: "wire"
       PGraphProducer : "test"
       PxContourProducer: "test_ctor"
       PxImageProducer: "test_img"
-      TrueROIProducer: "tpc"
+      #TrueROIProducer: "tpc"
+      TrueROIProducer: "segment"
       RecoROIProducer: "croimerge"
     }
     LArbysImageMC: {
-      MCProducer: "tpc"
-      Image2DProducer: "tpc"
+      #MCProducer: "tpc"
+      #Image2DProducer: "tpc"
+      MCProducer: "segment"
+      Image2DProducer: "wire"
     }
     UnionROI : {
       Verbosity: 2
-      InProducer: "tpc"
+      #InProducer: "tpc"
+      InProducer: "wire"
       OutProducer: "union"
     }
     NeutrinoSegment: {
@@ -329,7 +340,8 @@ ProcessDriver:{
     }
     CosmicPixelAna: {
       Verbosity: 2
-      EventImage2DProducer: "tpc"
+      #EventImage2DProducer: "tpc"
+      EventImage2DProducer: "wire"
       SegmentImage2DProducer: "neutrino_segment"
       ThruMuProducer: "thrumupixels"
       StopMuProducer: "stopmupixels"
