--- a/prod_fullchain_ssnet_combined_newtag.cfg
+++ b/prod_fullchain_ssnet_combined_newtag.cfg
@@ -2,8 +2,8 @@ ProcessDriver:{
   Verbosity: 2
   EnableFilter: false
   RandomAccess: false
-  ProcessType: ["ChannelMax","ChannelMax","ChannelMax","CombineImages","SegmentMask","SegmentMask","SegmentMask","MaskImage","MaskImage","MaskImage","BlankImage","WireMask","LArbysImage","VertexAna","LArbysImageMC"]
-  ProcessName: ["ChannelMaxPlane0","ChannelMaxPlane1","ChannelMaxPlane2","CombineImages","ShowerSegment","TrackSegment","ShowerImage","TrackImage","BlankImage","WireMask","LArbysImage","VertexAna","LArbysImageMC"]
+  ProcessType: ["ChannelMax","ChannelMax","ChannelMax","CombineImages","SegmentMask","SegmentMask","MaskImage","MaskImage","BlankImage","WireMask","LArbysImage","VertexAna","LEE1e1pAna","LArbysImageMC"]
+  ProcessName: ["ChannelMaxPlane0","ChannelMaxPlane1","ChannelMaxPlane2","CombineImages","ShowerSegment","TrackSegment","ShowerImage","TrackImage","BlankImage","WireMask","LArbysImage","VertexAna","LEE1e1pAna","LArbysImageMC"]
 
   AnaFile: "reco_ana.root"
   IOManager: {
@@ -101,8 +101,8 @@ ProcessDriver:{
       ADCImageProducer: "wire"
       TrackImageProducer: "track_tpc"
       ShowerImageProducer: "shower_tpc"
-      ThruMuImageProducer: "thrumupixels"
-      StopMuImageProducer: "stopmupixels"
+      ThruMuImageProducer: "thrumutags"
+      StopMuImageProducer: "stopmutags"
       ChStatusImageProducer: "dead_wire"
       MaskThruMu: true
       MaskStopMu: true
@@ -348,6 +348,16 @@ ProcessDriver:{
       PxImageProducer: "test_img"
       TrueROIProducer: "segment"
       RecoROIProducer: "croimerge"
+      FirstROI: false
+    }
+    LEE1e1pAna: {
+      Verbosity: 2
+      Image2DProducer: "modimg"
+      PGraphProducer: "test"
+      RecoROIProducer: "croimerge"
+      PxContourProducer: "test_ctor"
+      PxImageProducer: "test_img"
+      TrueROIProducer: "segment"
       FirstROI: false
     }
     LArbysImageMC: {
